Remove Click for Details from heading

--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
 <body>
     <header class="page-header">
         <h1>🎯 Mission 2025 Results</h1>
-        <p>Kerala Organizational Districts | Click for Details</p>
+        <p>Kerala Organizational Districts</p>
     </header>
     <div id="map"></div>
     
